# Server-Client-CTFpi

./: .env.example  .gitattributes  .github_refresh  .gitignore  API_HOST.service  Doxyfile  README.md  SETUP.md  autostart_service.py  db_config.example.json  maintain.py  nginx_to_pg.py  package-lock.json  start.py
Backend/: CMakeLists.txt  DBEAVER_SETUP.md  NGINX_SETUP.md  RASPBERRY_PI.md  README.md  acl.json  autostart_service.py  nginx.conf.example  nginx.full.conf.example  nginx_log_parser.py  nginx_logs_schema.sql  packet.h  server.c  server.cpp
Backend/build_app/: CMakeCache.txt  Makefile  cmake_install.cmake  db_config.json  index.html
Backend/tests/: testpacket.cpp
Frontend/CTF/: index.html  package-lock.json  package.json  vite.config.js
Frontend/CTF/coverage/: clover.xml  coverage-final.json  index.html
Frontend/CTF/coverage/src/: App.jsx.html  index.html  main.jsx.html
Frontend/CTF/coverage/src/api/: WebSocket.jsx.html  client.js.html  index.html
Frontend/CTF/coverage/src/components/: Button.jsx.html  Header.jsx.html  index.html
Frontend/CTF/coverage/src/pages/: About.jsx.html  ChallengeDetail.jsx.html  Challenges.jsx.html  Home.jsx.html  Login.jsx.html  index.html
Frontend/CTF/src/: App.css  App.jsx  App.test.jsx  index.css
Frontend/CTF/src/api/: WebSocket.jsx  client.js
Frontend/CTF/src/components/: Button.jsx  Button.test.jsx  Header.jsx  Header.test.jsx
Frontend/CTF/src/pages/: About.jsx  About.test.jsx  ChallengeDetail.jsx  ChallengeDetail.test.jsx  Challenges.jsx  Challenges.test.jsx  Dashboard.css  Dashboard.jsx  Home.jsx  Home.test.jsx  Login.css  Login.jsx  Login.test.jsx
Middleware/: middleware.js  package-lock.json  package.json  system_tests.js
(+9 files in other folders)
